--- a/TrainingDay/app/src/main/res/values/strings.xml
+++ b/TrainingDay/app/src/main/res/values/strings.xml
@@ -10,4 +10,11 @@
         <item>Rainha</item>
         <item>Rei</item>
     </string-array>
+    <string name="title_activity_swiper">SwiperActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
+    <string name="title_activity_drawer">DrawerActivity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 </resources>
