--- a/TrainingDay/app/src/main/res/values/strings.xml
+++ b/TrainingDay/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="chooser_title">Escolha ou tire uma foto</string>
+    <string name="menu_refresh">Atualizar</string>
 </resources>
